# GhostWriterAI

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  linkedin_post_22f84bbd.txt  pyproject.toml  render.yaml  requirements.txt
.agent/workflows/: email_verification_plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  alembic.ini  fly.toml  pytest.ini  requirements-minimal.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_generation_history.py  20260101_2010_2d8b3413d555_add_subscription_tier.py  20260102_1416_8996a95fa9a7_expand_brand_profile_fields.py  20260102_2151_0ed9e158aff7_add_email_verification.py
backend/scripts/: seed_knowledge_base.py
backend/src/: __init__.py
backend/src/agents/: __init__.py  base_agent.py  strategist_agent.py  validator_agent.py  writer_agent.py
backend/src/cli/: main.py
backend/src/config/: __init__.py  settings.py
backend/src/database/: __init__.py  connection.py  models.py
backend/src/llm/: __init__.py  gemini.py
backend/src/orchestration/: graph.py  state.py
backend/src/rag/: embeddings.py  vectorstore.py
backend/src/services/: email.py  history.py
backend/src/utils/: __init__.py
backend/tests/: __init__.py
backend/tests/integration/: test_agent_flow.py
backend/tests/unit/: test_rag.py
docs/: API.md  COMPONENT_SPECS.md  DATA_FLOW_SPECIFICATION.md  DEPLOYMENT.md  FRONTEND_API_INTEGRATION.md  FRONTEND_BLUEPRINT.md  UI_UX_DESIGN.md
docs/images/: README.md
frontend/: .env.example  .env.production.example  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ThemeToggle.tsx
frontend/src/hooks/: useGeneration.ts
frontend/src/pages/: AnalyticsPage.tsx  AuthCallbackPage.tsx  BrandProfilePage.tsx  DashboardPage.tsx  GenerationHistoryPage.tsx  LandingPage.tsx  LoginPage.tsx  PostDetailPage.tsx  PostGeneratorPage.tsx  PostHistoryPage.tsx  SettingsPage.tsx  SignupPage.tsx  VerifyEmailPage.tsx
frontend/src/services/: api.ts  auth.ts  brandProfile.ts  config.ts  posts.ts  streaming.ts
frontend/src/stores/: authStore.ts  generationStore.ts
frontend/src/types/: api.ts
mermaid/: system_architecture_detailed.mmd
scripts/: init_db.py
src/agents/: __init__.py  base_agent.py  optimizer_agent.py  visual_agent.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  rate_limit.py
src/api/routes/: __init__.py  auth.py  history.py  posts.py  streaming.py
src/cli/: __init__.py  enhanced.py  main.py
src/config/: __init__.py  constants.py  settings.py
src/database/: __init__.py  connection.py  models.py
src/database/repositories/: __init__.py  base.py  history.py
src/llm/: __init__.py  gemini.py
src/models/: __init__.py  schemas.py
src/orchestration/: __init__.py  callbacks.py  graph.py
src/rag/: __init__.py  embeddings.py  retriever.py
src/services/: __init__.py  cache.py  health.py
src/utils/: __init__.py  helpers.py
tests/e2e/: test_post_generation.py
tests/unit/: test_database.py  test_utils.py
tests/unit/test_agents/: test_core_agents.py
(+38 files in other folders)
